# db_car_params

./: .gitignore  README.md  pyproject.toml
core/core/: settings.py  urls.py
core/db_manager/: helpers.py  models.py  urls.py  views.py
core/db_manager/admin/: __init__.py  brand.py  configuration.py  generation.py  model.py  proxy_models.py  restyling.py
core/db_manager/forms/: configuration.py  core.py  crud_forms.py  generation.py  params_value_form.py
core/db_manager/models/vehicle/: __init__.py  attributes.py  model.py  params_value.py
core/db_manager/rest/: api.py  urls.py  view.py
core/db_manager/templates/: base.html  div.html  index.html  main.html  vehicle.html  vehicles_alt.html
core/db_manager/templates/all_car/: create.html  detail.html  update.html
core/db_manager/templates/configuration/: create.html  div.html
core/db_manager/templates/crud/: create.html  delete.html  detail.html  detail_vehicle.html  update.html
core/db_manager/templates/dependencies/: detail.html  tire.html
core/db_manager/templates/generation/: detail.html
core/db_manager/templates/params/: delete.html
core/db_manager/templates/registration/: login.html
core/db_manager/views/: __init__.py  abstract.py  create.py  delete.py  detail.py  index.py  rest.py  update.py
core/db_manager/views/configuration/: create.py  delete.py  detail.py  update.py
core/db_manager/views/dependencies/: detail.py  tire.py  update.py  wheel.py
core/db_manager/views/generation/: copy.py  create.py  detail.py  update.py
core/db_manager/views/params/: create.py  delete.py  index.py  (+1 more)
(+3 files in other folders)
